<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_list"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/item_rectangle_border">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/friend_image"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />


    <TextView
        android:id="@+id/friend_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/item_username"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/friend_image"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/friend_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/item_deviceName"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/friend_image"
        app:layout_constraintTop_toBottomOf="@+id/friend_userName" />

    <TextView
        android:id="@+id/friend_android_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_android_id"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/friend_image"
        app:layout_constraintTop_toBottomOf="@+id/friend_device" />

</android.support.constraint.ConstraintLayout>
