<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/item_list"
    android:layout_height="100dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/item_rectangle_border">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImage"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_wifi_black_24dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:civ_border_width="0dp"
        app:civ_border_color="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/circularProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:indeterminate="true"
        android:visibility="invisible"
        android:progressDrawable="@drawable/progress_bar_item_device"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/userName"
        android:layout_width="52dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/item_username"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toRightOf="@id/userImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input_userName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:maxLength="12"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:singleLine="true"
        android:text="input"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/userName"
        app:layout_constraintRight_toRightOf="@id/userName"
        app:layout_constraintStart_toEndOf="@+id/userName"
        app:layout_constraintTop_toTopOf="@+id/userName" />


    <TextView
        android:id="@+id/deviceName"
        android:layout_width="52dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:text="@string/item_deviceName"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/userImage"
        app:layout_constraintLeft_toRightOf="@id/userImage"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/input_deviceName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:maxLength="12"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:singleLine="true"
        android:text="input"

        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/deviceName"
        app:layout_constraintRight_toRightOf="@id/deviceName"
        app:layout_constraintStart_toEndOf="@+id/deviceName"
        app:layout_constraintTop_toTopOf="@+id/deviceName" />

    <Button
        android:id="@+id/item_button_status"
        style="@style/MaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/item_disconnected"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/item_button_friend"
        style="@style/MaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/item_friendKO"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/item_button_status"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userImage"
        app:layout_constraintVertical_bias="0.384" />


</android.support.constraint.ConstraintLayout>
